--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Fit Runner</string>
+    <string name="up">UP</string>
+    <string name="down">DOWN</string>
+    <string name="reset_counter">Reset counter</string>
+    <string name="name">Gabrijel</string>
+    <string name="reset">Reset</string>
+    <string name="croatian">Croatian</string>
+    <string name="english">English</string>
+    <string name="phone_number">phone number:</string>
+    <string name="send_sms">Send SMS</string>
+    <string name="success">"you have successfully made 10 steps "</string>
 </resources>
